fix overflowing issues

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -175,7 +175,7 @@
 	--max-width: 75rem;
 	max-width: var(--max-width);
 	margin-inline: auto;
-	padding-inline: 1.5rem;
+	padding-inline: 1rem;
 	@variant sm {
 		max-width: var(--max-width);
 	}
